@startuml
!pragma layout smetana


class User{
    -name: String

}
class Role{
    -name: String
    -description: String
    }

class House{
    -address: String
    -zipCode: String
    -gpsLocation: String


    }
class Room{
    -name: String
    -floor: Integer
    -length: double
    -width: double
    -height: double
    -owners: List<User>
    }
class Device{
    -name: String
    -status: boolean

    }
class Sensor{
    -name: String
    -description: String
    -state: boolean

    }
class Actuator{
    -name: String
    -state: boolean
    }
class DeviceType{
    -name: String
    -description: String
    }
class SensorType{
    -name: String
    -description: String
    -units: String
    -digital: boolean
    }
class ActuatorType{
    -name: String
    -description: String
    -units: String
    -digital: boolean
    }

House "1 " *-- "1..* " Room : has
User "1..* " o-- "1 " House : has
User "1    " o-- "1..* " Role : has
User "1 " o-- "1..* " Room : has
Room "1 " o-- "1..* " Device
Device "1 " o-- "1..* " Sensor
Device "1 " o-- "0..* " Actuator
Device "1 " o--- "1  " DeviceType
Sensor "1 " o-- "1 " SensorType
Actuator "1 " o-- "1 " ActuatorType



@enduml